<resources>
    <string name="app_name">Recordatorio de Medicamentos</string>
    <string name="txtRegUsu">Registro de usuario</string>
    <string name="txtNumTel">Numero de telefono:</string>
    <string name="telefono">Telefono</string>
    <string name="txtNomCom">Nombre completo:</string>
    <string name="nombre">Nombre</string>
    <string name="registrarme">Registrarme</string>
    <string name="iniSes">Iniciar Sesion</string>
    <string name="inicioSes">Inicio de sesión</string>
    <string name="correoElec">Correo electronico:</string>
    <string name="correo">Correo</string>
    <string name="salir">Salir</string>
    <string name="aceptar">Aceptar</string>
    <string name="contra">Contraseña:</string>
    <string name="contra2">Contraseña</string>
    <string name="acceder">Acceder</string>
    <string name="bienvenidotxt">¡Bienvenido a tu perfil!</string>
    <string name="cerrarsesion">Cerrar sesión</string>
    <string name="atras">Atras</string>
    <string name="tengocuenta">Tengo una cuenta</string>
    <string name="bienvenido">Bienvenido, te ayudaremos con tu tratamiento médico, administrando todo lo relacionado a tus recetas y poniendo a tu alcance doctores especialistas.</string>
    <string name="changed_to">Notificación cambiada a las %s</string>
    <string name="time_selected_is">Establecer hora:</string>
    <string name="change_time">Cambia la hora</string>
    <string name="select_time">Selecciona la hora</string>
    <string name="title_notification">Recordatorio de Medicina</string>
    <string name="new_notification">Es hora de tu medicamento :)</string>
    <string name="recordatorios">recordatorios</string>
    <string name="todo">TODO</string>
    <string name="registrarme_ahora">Paciente</string>
    <string name="ya_tengo_cuenta">Tutor</string>
    <string name="selecciona_una_opci_n">Selecciona el tipo de usuario:</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="edtNombre">Nombre:</string>
    <string name="edtUnidad">Unidad:</string>
    <string name="edtDuracion">Duración:</string>
    <string name="edtRecordar">Recordar Cada:</string>
    <string name="edtPriToma">Primera Toma:</string>
    <string name="tomarmedicamento">Es Hora de que tomes tus medicamentos </string>
    <string-array name="items_unidad">
        <item>Tableta(s)</item>
        <item>Cápsula(s)</item>
        <item>Solucion</item>
        <item>Crema</item>
        <item>Pomada</item>
        <item>Gel</item>
        <item>Gota(s)</item>
        <item>Polvo</item>
        <item>Spray</item>
        <item>Inyección(es)</item>
        <item>Cucharada(s)</item>
        <item>Aerosol(es)</item>
    </string-array>
</resources>